# totpaas

./: Makefile  Procfile  README.rst  pyproject.toml
src/totpaas/: app.py  main.py  resources.py  totp.py
tests/: test_totpaas.py
totpaas/: __init__.py  main.py  resources.py  totp.py
