[tool.poetry]
name = "totpaas"
version = "0.1.0"
description = ""
authors = ["Frederick Wagner <frederick@frederickwagner.net>"]

[tool.poetry.dependencies]
python = "^3.9.0"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipython = "^7.27.0"
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = """
    --doctest-modules
    --doctest-glob='*.doctest'
    --doctest-glob='*.rst'
    --doctest-glob='*.md'
    --doctest-glob='*.txt'
"""
